k8s/pluto/distributor/service.yml
apiVersion: v1
kind: Service
metadata:
  name: distributor
  namespace: pluto
  labels:
    app: distributor
spec:
  # type: LoadBalancer
  ports:
  - port: 1993
  selector:
    app: distributor
